--- a/config/database.yml
+++ b/config/database.yml
@@ -1,29 +1,23 @@
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
+  username: <%= ENV["DATABASE_USER"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
+  host: <%= ENV["DATABASE_HOST"] %>
 
 development:
-  adapter: mysql2
-  encoding: utf8
-  database: mini-blog-dev
-  pool: 5
-  username: root
-  password: <%=ENV['MYSQL_PASSWORD'] %>
-  host: localhost
-
+  <<: *default
+  database: <%= ENV["DATABASE_NAME"] %>
 
 test:
   <<: *default
-  database: storage/test.sqlite3
+  database: miniblog_test
 
-
-# SQLite3 write its data on the local filesystem, as such it requires
-# persistent disks. If you are deploying to a managed service, you should
-# make sure it provides disk persistence, as many don't.
-#
-# Similarly, if you deploy your application as a Docker container, you must
-# ensure the database is located in a persisted volume.
 production:
   <<: *default
-  # database: path/to/persistent/storage/production.sqlite3
+  database: miniblog_production
+  username: <%= ENV["DATABASE_USER"] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  host: <%= ENV["DATABASE_HOST"] %>
