--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ test:
 
 production:
   <<: *default
-  database: miniblog_production
+  database: <%= ENV["DATABASE_NAME"] %>
   username: <%= ENV["DATABASE_USER"] %>
   password: <%= ENV['DATABASE_PASSWORD'] %>
   host: <%= ENV["DATABASE_HOST"] %>
