--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -3,6 +3,7 @@ services:
   db:
     image: postgres:13
     environment:
+      POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
@@ -22,10 +23,11 @@ services:
     depends_on:
       - db
     environment:
-      DATABASE_HOST: db
+      DATABASE_HOST: ${POSTGRES_HOST}
       DATABASE_USER: ${POSTGRES_USER}
       DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
       DATABASE_NAME: ${POSTGRES_DB}
+      RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
       RAILS_ENV: production
     stdin_open: true
     tty: true
